--- a/public/index.html
+++ b/public/index.html
@@ -52,7 +52,9 @@
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
 
     <meta name="apple-mobile-web-app-title" content="Twittor!">
-
+    
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous">
+    <link rel="stylesheet" href="css/sweetalert2.css">
 </head>
 
 <body>
@@ -68,37 +70,60 @@
     <!-- Fin Titulo -->
 
 
+    <div class="container" >
+        <h1>Lorem Ipsum</h1>
 
+        <p>
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed a velit sed diam efficitur suscipit. Nunc
+            pretium mattis velit, ut condimentum dui congue sed. Proin varius lorem felis, quis venenatis mauris
+            bibendum vel. Aliquam convallis purus erat, et mollis elit iaculis in. Duis posuere ante sit amet sem
+            aliquet, a tincidunt tortor tristique. Maecenas pellentesque quis quam ac cursus. Cras interdum maximus
+            mauris, et luctus ex tincidunt ac. Aliquam luctus, diam at consequat sagittis, diam magna bibendum magna, id
+            dignissim dui ipsum at risus. Vivamus dictum erat vitae faucibus vehicula. Praesent consequat laoreet justo
+            et mattis. Cras cursus hendrerit ligula, ut consequat dolor vulputate vel. Nulla vitae metus mauris. Nulla
+            fermentum ac enim id iaculis. Morbi ac diam vel augue volutpat ultrices.
+        </p>
 
-    <!-- Seleccion de personaje -->
-    <div id="seleccion" class="seleccion animated fadeIn fast">
+        <p>
+            Ut eu metus arcu. Donec mattis sapien est, vel congue turpis mollis ac. Nam nec porta risus. Praesent mollis
+            elit ante. Proin ut maximus mauris. In interdum lorem nec tortor facilisis, vestibulum semper leo porttitor.
+            Sed vel nisl consectetur, rhoncus ligula sed, sagittis sem. Vivamus leo odio, hendrerit ornare felis
+            pellentesque, pulvinar tristique eros. Pellentesque faucibus, ante vitae dictum cursus, arcu ligula viverra
+            orci, in scelerisque sapien dolor vitae nisi. Proin ullamcorper mollis vehicula.
+        </p>
 
-        <!-- Botón de notificaciones -->
-        <button class="oculto btn-noti-activadas"><i class="far fa-smile-wink"></i> Notificaciones Activadas</button>
-        <button class="oculto btn-noti-desactivadas"><i class="far fa-angry"></i> Notificaciones Desactivadas</button>
-        <!-- Fin de boton de notificaciones -->
+        <p>
+            Pellentesque justo orci, venenatis a efficitur eu, accumsan sed mi. Mauris sagittis justo efficitur, commodo
+            nisi ut, pretium arcu. Suspendisse pretium nibh in vestibulum tempus. Morbi urna sapien, consequat vel
+            interdum vel, pulvinar at urna. Maecenas nec eleifend ex, sit amet tincidunt metus. Fusce tortor risus,
+            facilisis eu tortor sit amet, egestas facilisis dui. Quisque ut metus vel odio ultricies ultrices. Quisque
+            pharetra scelerisque augue nec elementum.
+        </p>
 
-        <div>
-            <img data-user="spiderman" src="img/avatars/spiderman.jpg" alt="spiderman" class="seleccion-avatar">
-        </div>
+        <p>
+            Donec vel nulla imperdiet, bibendum magna a, tincidunt est. Aliquam mattis erat vitae lectus venenatis, eget
+            mollis dolor fringilla. Quisque ut imperdiet mauris. Quisque id ex fringilla leo sollicitudin faucibus.
+            Vestibulum eget augue pretium, eleifend magna sit amet, convallis lectus. Praesent fringilla, augue in
+            egestas malesuada, nisl massa vehicula lorem, vitae iaculis mi magna vel lacus. Sed condimentum quam sed
+            malesuada efficitur. Sed fringilla sed odio eget dignissim. Nunc vehicula pellentesque fringilla. Aliquam eu
+            enim eget elit ultricies suscipit. Praesent quis eros posuere, congue mauris rhoncus, tempus mi. Morbi
+            tristique lorem blandit neque semper elementum. Nulla sapien nunc, ornare a elit in, lobortis pulvinar
+            mauris. Praesent pretium mattis ex et placerat.
+        </p>
 
-        <div>
-            <img data-user="ironman" src="img/avatars/ironman.jpg" alt="ironman" class="seleccion-avatar">
-        </div>
-
-        <div>
-            <img data-user="wolverine" src="img/avatars/wolverine.jpg" alt="wolverine" class="seleccion-avatar">
-        </div>
-
-        <div>
-            <img data-user="thor" src="img/avatars/thor.jpg" alt="thor" class="seleccion-avatar">
-        </div>
-
-        <div>
-            <img data-user="hulk" src="img/avatars/hulk.jpg" alt="hulk" class="seleccion-avatar">
-        </div>
-
+        <p>
+            Nullam cursus turpis vel mauris lacinia vestibulum. Sed congue iaculis cursus. Vivamus lacus metus, aliquam
+            eu aliquam et, lobortis et massa. Suspendisse malesuada erat non lectus pretium posuere. Nam sed metus eu
+            elit tincidunt tempus. Phasellus congue lorem mauris, ac commodo est feugiat vel. Curabitur vestibulum
+            ligula vitae consequat faucibus. Donec consectetur ultricies lorem, ut finibus purus rutrum ac. Proin
+            dignissim tristique odio, at elementum orci. Mauris ut posuere felis. Nullam ac volutpat nibh, ut posuere
+            enim. Quisque ut aliquam ex. Nulla ornare ligula ac tempus malesuada. Aliquam accumsan ligula sit amet ipsum
+            mattis, quis sodales urna placerat. Vivamus semper metus ut tincidunt aliquam.
+        </p>
     </div>
+
+
+
 
     <!-- FIN Seleccion de personaje -->
 
@@ -129,7 +154,10 @@
 
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+    <script src="//cdn.jsdelivr.net/npm/pouchdb@7.2.1/dist/pouchdb.min.js"></script>
     <script src="js/libs/plugins/mdtoast.min.js"></script>
+    <script src="js/sweetalert2.js"></script>
+    <script src="js/utils.js"></script>
     <script src="js/app.js"></script>
 
 </body>
