--- a/public/index.html
+++ b/public/index.html
@@ -71,7 +71,13 @@
 
 
     <div class="container" >
+
+      
         <h1>Lorem Ipsum</h1>
+
+        <p>
+            <b>Sólo tienes que bajar con el scroll al 80% y saltará un modal si no tienes las notificaciones activadas.</b>  
+        </p>
 
         <p>
             Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed a velit sed diam efficitur suscipit. Nunc
