--- a/public/index.html
+++ b/public/index.html
@@ -71,12 +71,10 @@
 
 
     <div class="container" >
-
-      
         <h1>Lorem Ipsum</h1>
 
         <p>
-            <b>Sólo tienes que bajar con el scroll al 80% y saltará un modal si no tienes las notificaciones activadas.</b>  
+            <b>Sólo tienes que bajar con el scroll al 80% y saltará un modal si no tienes las notificaciones activadas. Debe pasar al menos 3 segundos</b>  
         </p>
 
         <p>
