--- a/public/index.html
+++ b/public/index.html
@@ -21,7 +21,7 @@
     <link rel="manifest" href="manifest.json">
 
     <!-- Android -->
-    <meta name="theme-color" content="#3498db">
+    <meta name="theme-color" content="#64b126">
 
     <!-- IOS -->
     <meta name="apple-mobile-web-app-capable" content="yes">
@@ -128,39 +128,10 @@
 
 
 
-
-    <!-- FIN Seleccion de personaje -->
-
-    <!-- Lista de mensajes -->
-    <ul id="timeline" class="timeline oculto">
-
-        <!-- Mensaje -->
-        <!-- <li class="animated fadeIn fast">
-                <div class="avatar">
-                    <img src="img/avatars/spiderman.jpg">
-                </div>
-                <div class="bubble-container">
-                    <div class="bubble">
-                        <h3>@spiderman</h3>
-                        <br/>
-                        La tía May, hizo unos panqueques en forma de ironman!
-                    </div>
-                    
-                    <div class="arrow"></div>
-                </div>
-            </li> -->
-        <!-- Fin del mensaje -->
-
-    </ul>
-    <!-- Fin Lista de mensajes -->
-
-
-
-
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <script src="//cdn.jsdelivr.net/npm/pouchdb@7.2.1/dist/pouchdb.min.js"></script>
     <script src="js/libs/plugins/mdtoast.min.js"></script>
-    <script src="js/sweetalert2.js"></script>
+    <script src="js/libs/plugins/sweetalert2.js"></script>
     <script src="js/utils.js"></script>
     <script src="js/app.js"></script>
 
